--- a/test2.html
+++ b/test2.html
@@ -87,7 +87,7 @@
 //<![CDATA[
 analytics.track("Viewed supporter page");
 //]]>
-</script>  <meta content="http://bit.ly/1QCwLO0" property="og:url" />
+</script>  <meta content="http://bit.ly/1JwxAGf" property="og:url" />
   <meta content="https://dm5ei4oosl5j.cloudfront.net/users/images/972520/original/10463623_723943854343687_952386931204754435_o-dd9cabab23dd3415a10579442e0829f5.jpg" property="og:image" />
   <meta content="image/jpeg" property="og:image:type" />
 
